--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Shantell+Sans:wght@300&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -12,6 +14,7 @@ nav a {
     text-align: center;
     color:#09549F;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     background-color: #7FD3FF;
@@ -36,17 +39,25 @@ main section {
     height: 725px;
     background-color: #09549F;
 }
+
 body{
     background-color: white;
+    font-family: "Open Sans, Roboto, Sans Serif";
+    margin: 0;
+    padding: 0;
 }
 header {
-background-color: white;
+    background-color: white;
 }
 
 .book, .join {
     background-color: #7FD3FF;
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: white;
@@ -54,12 +65,20 @@ background-color: white;
 }
 .msg {
     background-color: #7FD3FF;
+    font-family: "shantell sans, permanent market, san serif";
+    padding: 35px;
 }
-footer {
+/*footer {
     background-color: #7FD3FF;
-}
+}*/
 .home-title {
     color: #7FD3FF;
+    font-family: "shantell sans, permanent market, sans serif";
+    font-size: 2em;
+    margin-top: 10px;
+}
+h2 {
+    margin: 0;
 }
 h4 {
     color: #7FD3FF;
@@ -69,9 +88,14 @@ h4 {
 }
 .msg p {
     color: white;
+    font-size: .8em;
+    line-height: 1.5em;
+    padding-bottom: 15px;
 }
 footer {
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     color: white;
@@ -84,9 +108,25 @@ footer a:hover {
     color: #09549F;
     text-decoration: underline;
 }
+footer, .social img {
+    padding-top: 15px;
+}
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 .logo {
     width: 80px;
     }
+#logo_link{
+    padding-top: 5px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid #09549F;
+}
+main section img {
+    box-sizing: border-box;
+}
