--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,11 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Shantell+Sans:wght@300&display=swap');
 
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
+header{
+    display: grid;
+    grid-template-columns: 150px auto;
+    
+
+}
 nav{
     background-color: #7FD3FF;
+    display: flex;
+    justify-content: space-around;
 }
 nav a {
     text-align: center;
@@ -17,6 +27,17 @@ nav a:hover {
     background-color: white;
     color: #09549F;
 }
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 #hero-msg h1{
     text-align: center;
 }
@@ -25,6 +46,11 @@ nav a:hover {
 }
 #hero-img {
     width: 100%;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
 }
 .button-box {
     text-align: center;
@@ -35,6 +61,8 @@ main section {
 #background {
     height: 725px;
     background-color: #09549F;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body{
@@ -43,8 +71,19 @@ body{
     margin: 0;
     padding: 0;
 }
-header {
-    background-color: white;
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+.logo {
+    width: 80px;
+}
+#logo_link{
+    /*background-color: #7FD3FF;*/
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .book, .join {
@@ -66,6 +105,10 @@ header {
     font-size: 2em;
     margin-top: 10px;
 }
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
 h2 {
     margin: 0;
 }
@@ -76,6 +119,9 @@ h4 {
     background-color: #7FD3FF;
     font-family: "shantell sans, permanent market, san serif";
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 .msg h2 {
     color: white;
@@ -86,11 +132,46 @@ h4 {
     line-height: 1.5em;
     padding-bottom: 15px;
 }
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.card-img {
+    border: 10px solid #09549F;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: 6;
+    transform: scale(1.1);
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
 footer {
     background-color: #7FD3FF;
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     color: white;
@@ -106,23 +187,50 @@ footer p a:hover {
 footer, .social img {
     padding-top: 15px;
 }
-.icon {
-    width: 80px;
-    padding-top: 10px;
-}
-.logo {
-    width: 80px;
-}
-#logo_link{
-    /*background-color: #7FD3FF;*/
-    padding-top: 5px;
-}
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0;
-}
-.card-img {
-    border: 10px solid #09549F;
-}
+
 main section img {
     box-sizing: border-box;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height:auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
