--- a/site_plan/site_plan.css
+++ b/site_plan/site_plan.css
@@ -11,8 +11,8 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Roboto Condensed";
+  --paragraph-font: Roboto Flex, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #5d3d00;  /* headlines on a white background */ 
