--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -154,6 +154,7 @@ h3{
     font-family: "shantell sans, permanent market, sans serif";
     font-size: 2em;
     margin-top: 10px; 
+    text-align: center;
 }
 h4 {
     color: #7FD3FF;
