--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -165,8 +165,62 @@ h4 {
     grid-template-rows: 1fr 1fr 1fr;
     margin: 50px 50px;
     grid-gap: 20px;
+}
+
+
+/* CSS for faq2*/
+
+.container{
+    position: relative;
+    margin: 100px auto;
+    width: 500px;     
+}
+.container input[type="checkbox"]{
+    display: none;
+}   
+.container label{
+    display: flex;
+    color: #FFFFFF;
+    padding: 15px 20px;
+    cursor: pointer;
+    background-color: #7FD3FF;
+    font-size: 1.5em;
+}
+.container label::after{
+    content: '\02795';
+    font-family: "shantell sans, permanent market, sans serif";
+    right: 20px;
+    position: absolute;
+    transition: .5s;
+}
+.container input[type='checkbox']:checked ~  label::after{
+    content: "\2796";
 
 }
+.container input[type='checkbox']:checked ~ .content{
+    height: auto;
+}
+.box {
+    margin-top: 10px;
+    box-shadow: 0px 0px 5px #6f7364;
+    color: #09549F;
+    background-color:whitesmoke;
+    font-family: "Open Sans, Roboto, Sans Serif";
+    
+}
+.content{
+    height: 0;
+    overflow: hidden;
+}
+.content p {
+    padding: 10px 20px;
+    font-size: 1.2em;
+}
+/*end faq2*/
+
+
+
+
 .msg {
     background-color: #7FD3FF;
     font-family: "shantell sans, permanent market, san serif";
