--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -225,7 +225,7 @@ h4 {
 
 .msg {
     background-color: #7FD3FF;
-    font-family: "shantell sans, permanent market, san serif";
+    font-family: "shantell sans, permanent market, sans serif";
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
