--- a/site_plan/styles/style.css
+++ b/site_plan/styles/style.css
@@ -46,7 +46,21 @@ nav a:hover {
 h1 {
   font-size: 30px;
   font-family: "Roboto Condensed, Sans Serif";
-  color: #814B14;
+  color: #7d4f50;
+}
+h2 {
+  text-align: center;
+  font-family: "Roboto Condensed, Sans Serif";
+  color: #7d4f50;
+}
+h4 {
+  text-align: center;
+}
+h5 {
+  text-align: center;
+  font-family: "Roboto Condensed, Sans Serif";
+  font-size: 5em;
+  color: #7d4f50;
 }
 p {
   font-family: "Roboto Flex, Open Sans";
@@ -79,6 +93,15 @@ button {
   font-size: 25px;
   
 }
+#columns {
+  display: inline-block;
+}
+.left-text {
+  text-align: left;
+}
+.right-text {
+  text-align: right;
+}
 footer {
   background-color: #cc8b86;
   color: white;
@@ -103,6 +126,86 @@ footer p a:hover {
 footer, .social img {
   padding-top: 25px;
 }
+/* Portofolio CSS*/
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #f1f1f1;
+  padding: 20px;
+  font-family: Arial;
+}
+
+/* Center website */
+.main {
+  max-width: 1000px;
+  margin: auto;
+}
+
+h1 {
+  font-size: 50px;
+  word-break: break-all;
+}
+h4 {
+  color: #7d4f50;
+}
+.row {
+  margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row,
+.row > .column {
+  padding: 8px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  display: none; /* Hide columns by default */
+}
+
+/* Clear floats after rows */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Content */
+.content {
+  background-color: white;
+  padding: 10px;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #cc8b86;
+  cursor: pointer;
+}
+
+/* Add a grey background color on mouse-over */
+.btn:hover {
+  background-color: #7d4f50;
+}
+
+/* Add a dark background color to the active button */
+.btn.active {
+  background-color: #7d4f50;
+   color: white;
+}
+/*End of Portofolio CSS*/
+
 
 
 
