--- a/site_plan/styles/style.css
+++ b/site_plan/styles/style.css
@@ -45,26 +45,31 @@ nav a:hover {
 }
 h1 {
   font-size: 30px;
-  font-family: "Roboto Condensed, Sans Serif";
+  font-family: "Roboto Condensed";
   color: #7d4f50;
 }
 h2 {
   text-align: center;
-  font-family: "Roboto Condensed, Sans Serif";
+  font-size: 3em;
+  font-family: "Roboto Condensed";
   color: #7d4f50;
+  
 }
 h4 {
   text-align: center;
+  font-size: 20px;
+  font-family: "Roboto Flex";
 }
 h5 {
   text-align: center;
-  font-family: "Roboto Condensed, Sans Serif";
+  font-family: "Roboto Condensed";
   font-size: 5em;
   color: #7d4f50;
 }
 p {
-  font-family: "Roboto Flex, Open Sans";
+  font-family: "Roboto Flex";
   color: #cc8b86;
+  font-size: 20px;
 }
 button {
   font-size: 25px;
@@ -275,3 +280,33 @@ form {
        between the labels and their text fields */
     margin-left: 0.5em;
   }
+  
+  #distribution {
+    display: grid;    
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /*gap: 10px;*/
+  }
+  #call-img {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+  .aboutme {
+    grid-column: 3/5;
+    grid-row: 1/3;
+    align-self: flex-start;
+  }
+  #feedback {
+    grid-column: 3/5;
+    grid-row: 3/5;
+    
+  }
+  /* <li>
+                       <label for="hireme">Hire me:</label><br>
+                       <input type="radio" id="freelancer" name="option" value="freelancer">
+                       <label for="freelancer">Freelancer</label><br>
+                       <input type="radio" id="halftime" name="option" value="halftime">
+                       <label for="halftime" >Half Time</label><br>
+                       <input type="radio" id="fulltime" name="option" value="fulltime">
+                       <label for="fultime">Full Time</label><br>
+                   </li>*/
+                   
