--- a/site_plan/styles/style.css
+++ b/site_plan/styles/style.css
@@ -37,6 +37,7 @@ nav a:hover {
 }
 .content {
   display: inline-block;
+ 
 }
   
 
@@ -47,6 +48,7 @@ h1 {
   font-size: 30px;
   font-family: "Roboto Condensed";
   color: #7d4f50;
+  text-align: center;
 }
 h2 {
   text-align: center;
@@ -55,16 +57,21 @@ h2 {
   color: #7d4f50;
   
 }
+
 h4 {
   text-align: center;
   font-size: 20px;
   font-family: "Roboto Flex";
+  
 }
 h5 {
   text-align: center;
   font-family: "Roboto Condensed";
   font-size: 5em;
   color: #7d4f50;
+}
+a {
+  text-decoration: none;
 }
 p {
   font-family: "Roboto Flex";
@@ -78,28 +85,46 @@ button {
   border: none;
 }
 .right-img {
-  float: right;
+  align-content: right;
   margin: 0 auto;
+  transition: transform .5s;
 }
 .left-img{
-  float: left;
+ align-items: left;
+  margin: 0 auto;
+  transition: transform .5s;
+}
+.right-img:hover {
+  opacity: 6;
+  transform: scale(1.1);
+}
+.left-img:hover {
+  opacity: 6;
+  transform: scale(1.1);
 }
 .right {
-  display: inline-block;
-  margin: 10px;
-  padding: 150px;
+ 
+  margin: auto;
+  padding: 30px;
   font-size: 25px;
-  position: relative;
+  
 }
 .left {
-  display: inline-block;
-  margin: 10px;
-  padding: 150px;
+ 
+  margin: auto;
+  padding: 30px;
   font-size: 25px;
   
 }
 #columns {
-  display: inline-block;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+gap: 20px;
+}
+#me{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 .left-text {
   text-align: left;
@@ -283,23 +308,24 @@ form {
   
   #distribution {
     display: grid;    
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    /*gap: 10px;*/
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+   
   }
   #call-img {
-    grid-column: 1/3;
-    grid-row: 1/3;
+    grid-column: 3;
+    /*grid-row: 1/5;*/
+   
   }
   .aboutme {
-    grid-column: 3/5;
+    grid-column: 3;
     grid-row: 1/3;
-    align-self: flex-start;
-  }
+      }
   #feedback {
-    grid-column: 3/5;
-    grid-row: 3/5;
-    
+    grid-column: 3;
+    /*grid-row: 3/5;*/
   }
+  @media screen and (max-width: 900px)
   /* <li>
                        <label for="hireme">Hire me:</label><br>
                        <input type="radio" id="freelancer" name="option" value="freelancer">
